prevent title overflows

--- a/assets/scss/theme/_posts.scss
+++ b/assets/scss/theme/_posts.scss
@@ -50,6 +50,9 @@ article.type-attachment {
 
         .entry-title {
             margin: 0;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
         }
 
         .entry-meta {
